envoy.yaml
# envoy demo with golang extension enabled
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.golang
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
              library_id: proxy
              library_path: "lib/proxy.so"
              plugin_name: shard_router
              plugin_config:
                "@type": type.googleapis.com/xds.type.v3.TypedStruct
                value:
                  s3_bucket: "tenant-mappings"
                  s3_key: "mappings.json"
                  s3_region: "us-east-1"
                  s3_endpoint: "http://minio:9000"
                  redis_addr: "redis:6379"
                  redis_password: ""
                  redis_db: 0
                  redis_key_prefix: "shard_router:"
                  memory_cache_size: 100
                  redis_ttl: "5m"
                  tenant_extraction_mode: "header"
                  tenant_header_name: "X-Tenant-ID"
                  redis_timeout: "2s"
                  s3_timeout: "30s"
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: helloworld_service_cluster
  clusters:
  - name: helloworld_service_cluster
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: helloworld_service_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: helloworld_service
                port_value: 8080
